문자열 기반 검색 케이스 개선